# Thymaris_fake_core

./: CMakeLists.txt  README.md  Thymaris_fake_core.json  base64.h  database_functions.cpp  database_functions.h  main.cpp  main.h  structures.h
.github/workflows/: build-and-publish.yml
docker/: docker-compose.yml
